# project-management-pipeline

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: manage.py  requirements.txt
app/integrations/: factory.py  utils.py
app/integrations/base/: adapter.py
app/integrations/clickup/: adapter.py  urls.py  views.py
app/integrations/jira/: adapter.py  urls.py  views.py
app/project_management_pipeline/: asgi.py  settings.py  urls.py  wsgi.py
app/projects/: admin.py  import_pipeline.py  models.py
app/projects/migrations/: 0001_initial.py  0002_remove_project_provider_remove_task_provider_and_more.py  0003_alter_task_custom_fields.py  0004_alter_task_custom_fields.py  0005_providerconnection_metadata.py
