[project]
name = "project-management-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.11",
    "requests>=2.32.5",
]
